fix layout on mobile devices

--- a/src/components/molecules/MobileNav/MobileNav.module.css
+++ b/src/components/molecules/MobileNav/MobileNav.module.css
@@ -4,7 +4,7 @@
     display: none;
   }
   
-  .ul {
+  .ul_nav {
     height: 100%;
     display: flex;
     align-items: center;
@@ -12,13 +12,25 @@
     list-style: none;
   }
   
+  .ul {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    flex-direction: column;
+    font-size: xx-large;
+  }
   .basketIcon {
     max-width: 3.5rem;
   }
-  
+  .logo{
+    width: 139px;
+  }
   .button {
     border: none;
     background-color: transparent;
+    width: 33px;
   }
   
   .menu {
